--- a/autochat/css/style.css
+++ b/autochat/css/style.css
@@ -16,6 +16,11 @@ body {
   color: #e0e0e0;
 }
 
+a {
+  position: relative;
+  z-index: 10;
+}
+
 /* Logo styling */
 .wm-logo {
   position: absolute;
